# dircli

./: CMakeLists.txt  direct.rb
include/: directory_creator.hpp  presets.hpp  utils.hpp
src/: directory_creator.cpp  main.cpp  presets.cpp  utils.cpp
